iss#196 Code inspections: Call to printStackTrace()